cabal-version:      >= 1.6
build-type:         Simple
name:               cmdargs
version:            0.1.1
license:            BSD3
license-file:       LICENSE
category:           Console
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2009
synopsis:           Command line argument processing
description:
    An easy way to define command line parsers. The two key features are:
    
    1) It's very concise to use, up to three times shorter than getopt.

    2) It supports programs with multiple modes (e.g. darcs or cabal).
homepage:           http://community.haskell.org/~ndm/cmdargs/
stability:          Beta
extra-source-files:
    cmdargs.htm

flag BuildCommand
    description: Build the test executable
    default: True

library
    build-depends: base == 4.*, mtl, filepath

    exposed-modules:
        System.Console.CmdArgs

executable cmdargs
    main-is: Main.hs
    other-modules:
        HLint
        Diffy
        Maker
    if flag(BuildCommand)
        buildable: True
    else
        buildable: False
