cabal-version:      >= 1.6
build-type:         Simple
name:               cmdargs-browser
version:            0.1
license:            BSD3
license-file:       LICENSE
category:           Console
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2011
synopsis:           Helper to enter cmdargs command lines using a web browser
description:
    Used in conjunction with a cmdargs enabled program to enter flags using a web browser,
    via the cmdargs helper programs mechanism.
homepage:           http://community.haskell.org/~ndm/cmdargs/
stability:          Beta

data-files:
    cmdargs.css
    cmdargs.js
    cmdargs.png
    jquery-1.4.2.js

source-repository head
    type:     darcs
    location: http://community.haskell.org/~ndm/darcs/cmdargs/

executable cmdargs-browser
    main-is: Main.hs
    build-depends:
        base == 4.*,
        transformers == 0.2.*,
        filepath,
        text,
        bytestring,
        http-types,
        wai,
        wai-handler-launch,
        cmdargs == 0.9.*

    other-modules:
        Paths_cmdargs_browser

