cabal-version:      >= 1.6
build-type:         Simple
name:               cmdargs-browser
version:            0.1.3
license:            BSD3
license-file:       LICENSE
category:           Console
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2011-2013
synopsis:           Helper to enter cmdargs command lines using a web browser
description:
    Used in conjunction with a cmdargs enabled program to enter flags using a web browser,
    via the cmdargs helper programs mechanism.
homepage:           http://community.haskell.org/~ndm/cmdargs/
stability:          Beta

data-files:
    cmdargs.css
    cmdargs.js
    favicon.png
    cmdargs.png
    jquery.js

source-repository head
    type:     darcs
    location: http://community.haskell.org/~ndm/darcs/cmdargs/

executable cmdargs-browser
    main-is: Main.hs
    build-depends:
        base == 4.*,
        transformers >= 0.2 && < 0.4,
        filepath,
        text,
        directory,
        process,
        bytestring,
        http-types >= 0.8,
        wai >= 1.4,
        wai-handler-launch >= 1.3,
        cmdargs >= 0.9 && < 1.11

    other-modules:
        Paths_cmdargs_browser

